<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Brick</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ob1_text">Scan plastic waste\nwith your phone</string>
    <string name="ob2_text">Follow instructions for Ecobrick suitability.</string>
    <string name="ob3_text">Join the sustainability journey with Smartbrick!</string>
    <string name="get_started">Get started</string>
    <string name="login_welcome">Welcome!</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="register_join_with_us">Join With Us!</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_sign_up">Sign Up?</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="home">Home</string>
    <string name="camera">Camera Scan</string>
    <string name="profile">Profile</string>
    <string name="home_welcome">Hello, %s!</string>
    <string name="today">Today</string>
    <string name="article">Article</string>
    <string name="account">Account</string>
    <string name="password_strict">Use at least 8 characters</string>
    <string name="incorrect_format">Incorrect format</string>
    <string name="more">More</string>
    <string name="data_verification">Data Verification</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="about_app">About App</string>
    <string name="log_out">Log Out</string>
    <string name="history">History</string>
    <string name="lets_contribute_to_our_earth">Let\'s contribute to our earth.</string>
    <string name="scan_picture">Scan Picture</string>
    <string name="back_to_home">Back to Home</string>
    <string name="scanning_result">Scanning Result</string>
    <string name="tips_tricks"><![CDATA[Tips & Tricks]]></string>
    <string name="select_in_gallery">Select from Gallery</string>
    <string name="error">Error</string>
    <string name="successfully">Successfully</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_log_out_of_your_account">Are you sure you want to log out of your account?</string>
    <string name="logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="this_waste_can_be_used_as_ecobricks">This waste is suitable to be used as Ecobricks</string>
    <string name="verification">Verification</string>
    <string name="please_enter_your_code_that_we_have_sent_nto_your_email_address">Please enter your code that we have sent \nto your email address</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP</string>
    <string name="resend_code">Resend Code</string>
    <string name="timer">(%d)</string>
    <string name="tipstricks_title_1">Proper Waste Separation</string>
    <string name="tipstricks_content_1">Make sure to separate different types of plastic so they can be recycled more efficiently.</string>
    <string name="tipstricks_title_2">Get to Know the Recycle Code</string>
    <string name="tipstricks_content_2">Know the plastic codes to understand what types of plastic can be recycled.</string>
    <string name="tipstricks_title_3">Clean Before Recycling</string>
    <string name="tipstricks_content_3">Make sure to clean and dry plastic bottles before recycling.</string>
    <string name="tipstricks_title_4">Reduce Single Use Plastic</string>
    <string name="tipstricks_content_4">Avoid single-use plastic products to reduce plastic waste.</string>
    <string name="what_is_smart_brick">What is Smart Brick?</string>
    <string name="smart_brick">Smart Brick</string>
    <string name="send_email">Send Email</string>
    <string name="subject">SUBJECT</string>
    <string name="home_page">eg. Home page</string>
    <string name="message">MESSAGE</string>
    <string name="tell_your_detail_problems">tell your detail problems</string>
    <string name="app_email">mhdepan@gmail.com</string>
    <string name="please_fill_in_the_entire_form">please fill in the entire form</string>
    <string name="no_email_app_installed">No email app installed</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="make_sure_only_the_object_is_visible">Make sure only the object is visible</string>
    <string name="information">Information</string>
    <string name="please_scan_or_take_a_picture_of_your_trash_from_the_gallery">Please scan or take a picture of your trash from the gallery</string>
    <string name="step_ecobrick">1. Prepare a plastic bottle with a strong wick.\n2. Collect clean and dry non-biodegradable plastic waste.\n3. Cut or scissor plastic waste into small sizes.\n4. Put the plastic pieces into the plastic bottle.\n5. Use a stick or compactor to compact the plastic waste in the bottle.\n6. Make sure the bottle is full and well compressed.\n7. Close the bottle tightly.\n8. Store ecobricks in a dry place and safe from direct sunlight.\n9. Use ecobricks as an alternative building material.</string>
    <string name="press_to_send_otp">Press to send OTP</string>
    <string name="your_account_has_been_verified">Your account has been verified</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="please_verified_you_account">Please verify your account</string>
    <string name="success_take_photo">Success take photo.</string>
    <string name="failed_take_photo">Failed take photo.</string>
    <string name="this_waste_cant_be_used_as_ecobricks">this waste isn\'t suitable to be used as Ecobrick</string>
    <string name="not_suitable">Not suitable</string>
    <string name="suitable">Suitable</string>
    <string name="feature_is_under_construction">Feature is under construction</string>
    <string name="about_app_content">Smartbrick is an application that provides tools for making ecobricks. The way it works is that the user can scan an image of the plastic, to find out the results of the classification of whether the plastic is suitable for use as an ecobrick or not. After carrying out the scan, the user will be given short instructions regarding the steps that must be taken to make a suitable ecobrick. Apart from doing that, Smartbrick also provides articles related to ecobricks. In further development, there will be a reward system where users can get benefits from scanning plastic waste, and get rewards based on the most scanning history.</string>
    <string name="no_image_selected">No image selected</string>
</resources>